# Sentinel

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_VERIFICATION.md  README.md  prompt.txt  pyproject.toml  requirements.txt  rss.csv
.kiro/hooks/: update-docs-hook.kiro.hook
agents/: README.md  analyst-assistant-agent.yaml  ci-cd-integration.sh  deploy-agents.sh  ingestor-agent.yaml  manage-agents.sh
agents/monitoring/: dashboard-template.json
cloudformation/: COGNITO_AMPLIFY_AGENTCORE_DEPLOYMENT.md  COMPLETE_DEPLOYMENT_SUMMARY.md  DELIVERABLES.md  DEPLOYMENT_GUIDE.md  LAMBDA_DEPLOYMENT_GUIDE.md  README.md  TEMPLATE_UPDATES_SUMMARY.md  deploy-lambda-packages.sh  deploy.sh  parameters-dev.json  parameters-prod.json  sentinel-infrastructure-complete.yaml  sentinel-storage.yaml  sentinel-vpc-networking.yaml  validate-templates.sh
config/: feature_flags.yaml  feeds.yaml  keywords.yaml
docs/: configuration-management.md  configuration_examples.md  disaster-recovery.md  keyword-management.md  operations-runbook.md  scaling-guide.md  troubleshooting.md  user-access-control.md  user-guide.md
infra/: .terraform.lock.hcl  backend.hcl  backend.hcl.example  backend.tf  main.tf  outputs.tf  setup-backend.sh  variables.tf
infra/bootstrap/: main.tf
infra/envs/: README.md  dev.tfvars  prod.tfvars  validate-config.sh
scripts/: build-xray-layer.sh  configure-feeds.sh  deploy.sh  setup_venv.sh  test-keyword-matching.py  validate-deployment.sh  validate-infrastructure.py  validate-system.sh
src/lambda/: example_with_tracing.py
src/lambda_tools/: .gitkeep  __init__.py  agent_shim.py  commentary_api.py  dedup_tool.py  feed_parser.py  guardrail_tool.py  human_escalation.py  publish_decision.py  query_kb.py  relevancy_evaluator.py  report_generator.py  storage_tool.py  storage_tool_simple.py
src/shared/: .gitkeep  __init__.py  config.py  config_loader.py  keyword_manager.py  models.py
src/utils/: correlation_id.py
tests/: test_agent_shim.py  test_commentary_api.py  test_config_loader.py  test_dedup_tool.py  test_feed_parser.py  test_guardrail_tool.py  test_human_escalation.py  test_publish_decision.py  test_query_kb.py  test_relevancy_evaluator.py  test_relevancy_evaluator_integration.py  test_report_generator.py  test_storage_tool.py  test_storage_tool_main.py  test_storage_tool_simple.py
tests/integration/: __init__.py  conftest.py  test_agent_interactions.py  test_api_endpoints.py  test_database_consistency.py  test_error_handling.py  test_feed_ingestion_pipeline.py
tests/performance/: Makefile  __init__.py  conftest.py  locustfile.py  performance_config.yaml  requirements.txt  run_performance_tests.py  test_bulk_operations.py  test_feed_ingestion_load.py  test_system_resources.py  test_web_application_load.py
web/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  amplify.yml  package-lock.json  package.json  tsconfig.json
web/public/: index.html  manifest.json
web/src/: App.css  App.tsx  setupTests.ts
(+108 files in other folders)
